--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -202,6 +202,9 @@ $border-radius: 3px;
   &__transcription {
     color: $color-second-regular;
   }
+  &--active {
+    border-color: $color-second-regular;
+  }
   &--correct {
     color: $color-correct;
     border-color: $color-correct;
